--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -15,49 +15,12 @@ a {
   a:hover {
     text-decoration: underline; }
 
-.btn {
-  display: inline-block;
-  margin-bottom: 1rem;
-  color: rgba(255, 255, 255, 0.7);
-  background-color: rgba(255, 255, 255, 0.08);
-  border-color: rgba(255, 255, 255, 0.2);
-  border-style: solid;
-  border-width: 1px;
-  border-radius: 0.3rem;
-  transition: color 0.2s, background-color 0.2s, border-color 0.2s; }
-  .btn + .btn {
-    margin-left: 1rem; }
-
-.btn:hover {
-  color: rgba(255, 255, 255, 0.8);
-  text-decoration: none;
-  background-color: rgba(255, 255, 255, 0.2);
-  border-color: rgba(255, 255, 255, 0.3); }
-
-@media screen and (min-width: 64em) {
-  .btn {
-    padding: 0.75rem 1rem; } }
-
-@media screen and (min-width: 42em) and (max-width: 64em) {
-  .btn {
-    padding: 0.6rem 0.9rem;
-    font-size: 0.9rem; } }
-
-@media screen and (max-width: 42em) {
-  .btn {
-    display: block;
-    width: 100%;
-    padding: 0.75rem;
-    font-size: 0.9rem; }
-    .btn + .btn {
-      margin-top: 1rem;
-      margin-left: 0; } }
-
 .page-header {
   color: #fff;
   text-align: center;
   background-color: #159957;
-  background-image: linear-gradient(120deg, #155799, #159957); }
+  background-image: linear-gradient(120deg, #155799, #159957); 
+  margin:0px;}
 
 @media screen and (min-width: 64em) {
   .page-header {
@@ -69,7 +32,7 @@ a {
 
 @media screen and (max-width: 42em) {
   .page-header {
-    padding: 2rem 1rem; } }
+    padding: 3rem 0rem; } }
 
 .project-name {
   margin-top: 0;
@@ -85,7 +48,7 @@ a {
 
 @media screen and (max-width: 42em) {
   .project-name {
-    font-size: 1.75rem; } }
+    font-size: 2.25rem; } }
 
 .project-tagline {
   margin-bottom: 2rem;
@@ -94,15 +57,15 @@ a {
 
 @media screen and (min-width: 64em) {
   .project-tagline {
-    font-size: 1.25rem; } }
+    font-size: 2.5rem; } }
 
 @media screen and (min-width: 42em) and (max-width: 64em) {
   .project-tagline {
-    font-size: 1.15rem; } }
+    font-size: 2.15rem; } }
 
 @media screen and (max-width: 42em) {
   .project-tagline {
-    font-size: 1rem; } }
+    font-size: 2.15rem; } }
 
 .main-content :first-child {
   margin-top: 0; }
@@ -243,3 +206,66 @@ a {
 @media screen and (max-width: 42em) {
   .site-footer {
     font-size: 0.9rem; } }
+    
+a#forkme_banner {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 138px;
+    height: 138px;
+    display: block;
+    background: transparent url(images/fork-sprite.png) 0 0 no-repeat;
+    text-indent: -9000px;
+    z-index: 3;
+}
+div.item_list{
+  display:block;width:240px;height:320px;border:solid 1px #ccc;margin:5px auto;
+}
+.fa-weibo{
+  font-size: 120%;
+}
+.item_list a{
+  text-decoration: none;
+  
+} 
+.item_list_title{
+  font-size: 22px;
+  width: 100%;
+  height: 30%;
+  margin: 0px 0px 10px;
+  padding: 15px 10px;
+  color: #fff;
+  text-align: center;
+  background-color: #1e6bb8;
+  /*background-image: linear-gradient(120deg, #155799, #159957); */
+}
+.item_list_description{
+  word-wrap:break-word;
+  font-size: 16px;
+  font-family: "\5FAE\8F6F\96C5\9ED1";
+  width: 100%;
+  height: 55%;
+  max-height: 55%;
+  margin: 0px 0px 10px;
+  padding: 5px;
+  color: #454545;
+  text-align: center;
+}
+.item_list_description h3{
+  font-size: 18px;
+  margin-top:0px;
+  color: #159957;
+  text-decoration: underline;
+}
+.item_list_tag{
+  font-size: 14px;
+  padding: 2px 10px;
+}
+.web_introduce{
+  margin-top:0px;
+  margin-bottom: 15px;
+  font-size: 20px;
+  font-family: "\5FAE\8F6F\96C5\9ED1";
+  color: #159957;
+  text-align: center;
+}
